<resources>
    <string name="app_name">Android Inventory</string>

    <string name="empty_view_title_text">It\'s empty here</string>
    <string name="empty_view_subtitle_text">Click the floating button to add products</string>

    <!-- EditorActivity strings -->

    <string name="name">Name</string>
    <string name="hint_product_name">Product Name</string>

    <string name="price">Price</string>
    <string name="hint_product_price">Product Price</string>
    <string name="currency">$</string>

    <string name="quantity">Quantity</string>
    <string name="hint_product_quantity">Product Quantity</string>
    <string name="image">Image</string>

    <string name="editor_insert_product_failed">Error with saving product!</string>
    <string name="editor_insert_product_successful">Product saved!</string>

    <string name="editor_update_product_failed">Error with updating product!</string>
    <string name="editor_update_product_successful">Product updated!</string>

    <!-- Menu strings -->

    <string name="action_save">Save</string>

    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>


    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="blank_product_error">All fields should be filled out</string>

    <string name="order_email_body">Hi. I would like to order %1$s units of %2$s </string>

</resources>
